--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,34 @@
 {
-  "extends": ["./node_modules/rete-cli/.eslintrc", "plugin:@typescript-eslint/recommended"],
+  "extends": ["./node_modules/efficy-rete-cli/.eslintrc", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "parserOptions": {
     "sourceType": "module"
   },
   "rules": {
-    "no-undef": "error",
+    "no-sparse-arrays": "off",
+    "no-extra-boolean-cast": "off",
+    "indent": "off",
+    "prefer-const": "off",
+    "no-shadow": "off",
+    "no-undef": "off",
     "sort-imports": ["warn", {
       "memberSyntaxSortOrder": ["single", "all", "multiple", "none"]
     }],
     "no-new": "off",
     "max-len": ["warn", 120],
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-parameter-properties": "off"
+    "@typescript-eslint/no-parameter-properties": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-this-alias": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-unnecessary-type-constraint": "off",
+    "@typescript-eslint/no-inferrable-types": "off"
   },
   "env": {
     "es6": true,
