--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rete",
-  "version": "1.4.6-rc.1",
+  "version": "1.4.6-rc.2",
   "description": "JavaScript framework",
   "main": "build/rete.common.js",
   "module": "build/rete.esm.js",
@@ -11,7 +11,7 @@
     "prepublishOnly": "npm run lint && npm run build",
     "prebuild": "npm run lint & npm test && npm run types",
     "lint": "tsc && eslint --ext .ts --ext .js src",
-    "test": "BABEL_ENV=test mocha -r ts-node/register test/**.ts",
+    "test": "cross-env BABEL_ENV=test mocha",
     "coverage": "nyc npm run test",
     "types": "tsc src/index.ts --target es5 --declaration --outDir ./types --downlevelIteration --emitDeclarationOnly"
   },
@@ -32,19 +32,31 @@
   },
   "homepage": "https://github.com/retejs/rete#readme",
   "devDependencies": {
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jsdom": "^12.2.2",
-    "@types/mocha": "^5.2.6",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.1",
-    "jsdom": "^13.2.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/plugin-transform-typescript": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/jsdom": "^16.2.14",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "cross-env": "^7.0.3",
+    "efficy-rete-cli": "^1.0.0-alpha1",
+    "eslint": "^8.10.0",
+    "jsdom": "^19.0.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.2.0",
-    "nyc": "^14.1.1",
-    "rete-cli": "0.6.0-rc.5",
-    "ts-node": "^8.0.2",
-    "typescript": "^3.3.3333"
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.5.0",
+    "typescript": "^3.7.7"
+  },
+  "mocha": {
+    "extension": ["ts"],
+    "loader": "ts-node/esm",
+    "spec": "test/**.ts",
+    "require": "ts-node"
   }
 }
