--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rete",
+  "name": "efficy-rete",
   "version": "1.4.6-rc.2",
   "description": "JavaScript framework",
   "main": "build/rete.common.js",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/retejs/rete.git"
+    "url": "git+https://github.com/sfe-efficy/rete.git"
   },
   "keywords": [
     "dataflow",
